fix: removed horizontal scroll in blog

--- a/src/Component/NavBar/NavBar.css
+++ b/src/Component/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .NavBarContainer {
   position: absolute;
-  width: 100vw;
+  width: 98vw; /* So there is no horizontal scroll */
   display: flex;
   justify-content: center;
 }
@@ -9,6 +9,7 @@
   position: relative;
   display: flex;
   position: relative;
+  margin-left: 2vw;
 }
 
 @media (max-width: 768px) {
